feat: 实现退出登录的功能